[package]
name = "steno"
version = "0.4.2-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/steno"
description = "distributed saga implementation"

[profile.dev]
#panic = "abort"

[dependencies]

[dev-dependencies]
expectorate = "1.0"
slog-async = "2.8"
slog-term = "2.9"
structopt = "0.3"
subprocess = "0.2.6"
proptest = "1.5.0"
